@@ -1,3 +1,10 @@
+2012-08-21  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>
+
+        * Version 2.16 released.
+
+        * Fixed username lookup when using FullAuto with TeamSite.
+
+
 2012-04-27  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>
 
         * Version 2.15 released.
